<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:background="@color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/sort_by"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorGreyLight" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ok"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/ok"
            android:textColor="@color/black" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>